--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "react-openlayers",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "OpenLayer React Components",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --port 9001 --content-base src/examples --config src/examples/webpack.config --open",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --port 9001 --content-base examples --config examples/webpack.config --open",
     "clean": "rimraf dist",
     "build": "npm-run-all --serial clean build:umd build:app",
     "build:umd": "cross-env NODE_ENV=production webpack",
-    "build:app": "cross-env NODE_ENV=production webpack --config src/examples/webpack.config",
-    "upgrade": "npm-check-updates -a/--upgradeAll && npm i"
+    "build:app": "cross-env NODE_ENV=production webpack --config examples/webpack.config"
   },
   "repository": {
     "type": "git",
@@ -31,58 +30,48 @@
   ],
   "devDependencies": {
     "@material-ui/core": "^3.7.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@types/google-maps": "^3.2.0",
     "@types/googlemaps": "^3.26.4",
     "@types/node": "^10.12.18",
-    "@types/ol": "4.6.2",
+    "@types/ol": "^5.3.3",
     "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
+    "@types/react-dom": "^16.7.0",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/whatwg-fetch": "0.0.33",
-    "awesome-typescript-loader": "^5.2.1",
-    "core-js": "^2.4.1",
+    "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
-    "dts-generator": "^2.1.0",
-    "forever": "^0.15.3",
-    "fs-extra": "^7.0.1",
     "geo-coder": "^1.0.2",
     "html-loader": "^0.5.5",
-    "node-sass": "^4.5.0",
     "npm-run-all": "^4.1.5",
-    "raw-loader": "^1.0.0",
-    "react-async-loader": "^0.1.2",
-    "react-async-script-loader": "^0.3.0",
+    "ol-mapbox-style": "^4.3.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.1.2",
     "resolve-url-loader": "^3.0.0",
     "rimraf": "^2.6.0",
-    "rxjs": "^6.3.3",
-    "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.4",
-    "strip-loader": "^0.1.2",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.2",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-microsoft-contrib": "^6.0.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "3.2.2",
+    "terser-webpack-plugin": "^1.3.0",
+    "typescript": "^3.5.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.11",
-    "webtest": "^0.8.3",
-    "zone.js": "^0.8.26"
+    "webpack-bundle-analyzer": "^3.3.2"
+  },
+  "peerDependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "dependencies": {
-    "google-maps": "^3.2.1",
-    "ol": "4.6.5",
-    "ol-mapbox-style": "2.11.2",
-    "openlayers": "4.6.5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "ol": "^5.3.3"
   }
 }
