--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
         "jsx": "react",
         "pretty": true,
         "allowJs": false,
-        "sourceMap": true,
+        "sourceMap": false,
         //"allowUnreachableCode": true,
         //"allowUnusedLabels": true,
         "noImplicitUseStrict": false,
@@ -52,7 +52,7 @@
         "node_modules/@types/ol/index.d.ts",
     ],
     "include": [
-        "src/**/*"
+        "src/**/*", "examples"
     ],
     "exclude": [
         "node_modules"
