--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --port 9001 --content-base examples --config examples/webpack.config --open",
+    "check-types": "tsc",
     "clean": "rimraf dist",
     "build": "npm-run-all --serial clean build:umd build:app",
     "build:umd": "cross-env NODE_ENV=production webpack",
@@ -44,9 +45,13 @@
     "@types/react-dom": "^16.7.0",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
+    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
     "babel-loader": "^8.0.6",
+    "babel-eslint": "10.x.x",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
+    "eslint": "^6.1.0",
     "geo-coder": "^1.0.2",
     "html-loader": "^0.5.5",
     "npm-run-all": "^4.1.5",
