--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rimraf dist",
     "build": "npm-run-all --serial clean build:umd build:app",
     "build:umd": "cross-env NODE_ENV=production webpack",
-    "build:app": "cross-env NODE_ENV=production webpack --config examples/webpack.config"
+    "build:app": "cross-env NODE_ENV=production webpack --config examples/webpack.config",
+    "lint": "eslint --cache \"src/**/*.tsx\""
   },
   "repository": {
     "type": "git",
@@ -51,7 +52,7 @@
     "babel-eslint": "10.x.x",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
-    "eslint": "^6.1.0",
+    "eslint": "5.x.x",
     "geo-coder": "^1.0.2",
     "html-loader": "^0.5.5",
     "npm-run-all": "^4.1.5",
