--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "@typescript-eslint/indent": ["warn", 2]
+    "@typescript-eslint/indent": ["warn", 2],
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
