--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@types/googlemaps": "^3.26.4",
     "@types/node": "^10.12.18",
     "@types/ol": "^5.3.3",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.7.0",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "@typescript-eslint/parser": "^1.13.0",
@@ -56,8 +56,8 @@
     "geo-coder": "^1.0.2",
     "html-loader": "^0.5.5",
     "npm-run-all": "^4.1.5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.1.2",
@@ -73,8 +73,7 @@
     "webpack-bundle-analyzer": "^3.3.2"
   },
   "peerDependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "^16.7.0"
   },
   "dependencies": {
     "ol": "^5.3.3"
