--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
         "allowSyntheticDefaultImports": true,
+        "skipLibCheck": true,
         //"noEmitHelpers": false,
         //"emitDecoratorMetadata": true,
         //"experimentalDecorators": true,
