--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npm-run-all --serial clean build:umd build:app",
     "build:umd": "cross-env NODE_ENV=production webpack",
     "build:app": "cross-env NODE_ENV=production webpack --config examples/webpack.config",
-    "lint": "eslint --cache \"src/**/*.tsx\""
+    "lint": "eslint --cache \"+(src|examples)/**/*.ts?(x)\""
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,9 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
     "eslint": "5.x.x",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-react": "^7.14.3",
     "geo-coder": "^1.0.2",
     "html-loader": "^0.5.5",
     "npm-run-all": "^4.1.5",
