--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --port 9001 --content-base examples --config examples/webpack.config --open",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --port 9001 --hot --config examples/webpack.config --open",
     "check-types": "tsc",
     "clean": "rimraf dist",
     "build": "npm-run-all --serial clean build:umd build:app",
@@ -31,6 +31,7 @@
     "map"
   ],
   "devDependencies": {
+    "@hot-loader/react-dom": "16.7.0",
     "@material-ui/core": "^3.7.1",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
@@ -61,6 +62,7 @@
     "npm-run-all": "^4.1.5",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-hot-loader":"^4.12.11",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.1.2",
